# thesis-ml

./: LICENSE  README.md  model.ipynb  notebook.ipynb  notebook.py  pyproject.toml  requirements.txt
dataset/: Klasifikasi Tingkatan Bahasa Bali p1.xlsx  Klasifikasi Tingkatan Bahasa Bali p2.xlsx  Klasifikasi Tingkatan Bahasa Bali p3.xlsx  Klasifikasi Tingkatan Bahasa Bali p4.xlsx
model/: mnb.joblib  pipeline.joblib  tfidf.joblib
